Another wonderful FontAwesome icon rename. Sigh.

--- a/assets/javascripts/discourse/templates/connectors/composer-fields/directoryopus-composer-help.hbs
+++ b/assets/javascripts/discourse/templates/connectors/composer-fields/directoryopus-composer-help.hbs
@@ -2,7 +2,7 @@
 	{{#if this.siteSettings.directoryopus_composer_help_title}}
 		{{#if this.siteSettings.directoryopus_composer_help_url}}
 			<div class="directoryopus-composer-help">
-				<a href="{{this.siteSettings.directoryopus_composer_help_url}}">{{d-icon 'info-circle'}} {{this.siteSettings.directoryopus_composer_help_title}}</a>
+				<a href="{{this.siteSettings.directoryopus_composer_help_url}}">{{d-icon 'circle-info'}} {{this.siteSettings.directoryopus_composer_help_title}}</a>
 			</div>
 		{{/if}}
 	{{/if}}
